# api-mocker

./: .gitignore  .prettierignore  .prettierrc.js  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-assign.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: auto-assign.yml  auto-merge.yml  build_release.yml  codeql.yml  commitlint.yml  dependency-review.yml  stale.yml
docs/: USER_MANUAL.md  mock-app-plan.md
src/: App.vue  components.d.ts  env.d.ts  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: db_crud.rs  greet.rs  http_client.rs  import_export.rs  mock_server.rs  mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src/assets/: main.css
src/components/mock/: AiChatDialog.vue  EnvManager.vue  HistoryDetailDialog.vue  HistoryPanel.vue  ImportExport.vue
src/components/mock/shared/: FormDataTable.vue  JsonHighlight.vue  KeyValueTable.vue  MonacoEditor.vue
src/components/mock/sidebar/: CollectionTree.vue  (+4 more)
src/composables/: useAiChat.ts
src/router/: index.ts
src/stores/: app.ts  toast.ts
src/stores/mock/: collection.ts  env.ts  history.ts  request.ts  rule.ts  server.ts  settings.ts
src/types/: mock.ts
src/utils/: mockjs.ts
src/views/mock/: MockLayout.vue  Workbench.vue
(+26 files in other folders)
