[package]
name = "api-mocker"
version = "0.4.0"
description = "A Tauri App"
authors = ["senjyouhara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-opener = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
parking_lot = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
futures-util = "0.3"

# Release 构建优化
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

